fixed horizontal scroll bar bug

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,7 +11,6 @@
    position: fixed;
   width: 100%;
   height: 100%;
-  overflow-x: hidden
 }
 
 
@@ -38,7 +37,7 @@ body {
 
   background-color: #171717;
   font-family: sailec, Helvetica, sans-serif;
-
+  overflow-x: hidden;
 }
 
 .navbar {
